refactoring-tool(src\main\java\com\example\modfac\service\EmployeeService.java):   {     "type": "class_variable",     "object_names": [       "COUNTRY_NAMES"     ],     "full_result": {       "type": "MutablePublicArray",       "code_location": {         "location": "COUNTRY_NAMES",         "loc_type": "class_variable"       },       "description": "The COUNTRY_NAMES variable is declared as a public static final list, which is mutable. This can lead to unintended modifications by external classes. To ensure immutability, use an unmodifiable list or an immutable collection.",       "code_segment": "public static final List<String> COUNTRY_NAMES = List.of(\"France\", \"US\", \"UK\", \"Tuvalu\", \"Lesotho\", \"Kyrgyzstan\", \"Nepal\", \"Luxembourg\", \"Dominica\", \"Martinica\");",       "suggested_fix": "Replace the declaration with: public static final List<String> COUNTRY_NAMES = Collections.unmodifiableList(List.of(\"France\", \"US\", \"UK\", \"Tuvalu\", \"Lesotho\", \"Kyrgyzstan\", \"Nepal\", \"Luxembourg\", \"Dominica\", \"Martinica\")); This ensures that the list cannot be modified externally."     },     "sonarqube_issue_id": null   }