@@ -36,7 +36,7 @@ public class EmployeeService {
         /**
          * An immutable list of country names that can be safely used without concerns about mutability.
          */
-        public static final List<String> COUNTRY_NAMES = List.of("France", "US", "UK", "Tuvalu", "Lesotho", "Kyrgyzstan", "Nepal", "Luxembourg", "Dominica", "Martinica");
+        public static final List<String> COUNTRY_NAMES = Collections.unmodifiableList(List.of("France", "US", "UK", "Tuvalu", "Lesotho", "Kyrgyzstan", "Nepal", "Luxembourg", "Dominica", "Martinica"));
     private static final List<String> ZIP_CODES = List.of("10001", "90001", "60001", "77001", "85001", "19101", "78201", "92101", "75201", "95101");
     public static final int NUM_EMPLOYEES = 500;
 
